--- a/App.css
+++ b/App.css
@@ -10,6 +10,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.scoreBoard {
+  list-style-type: none;
+  font-size: 22px;
+  color: white;
+}
 .nav-header {
   background-color: #2c0e3a;
   display: flex;
